Added Basic flow to add orders and executions

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,12 @@
 orderBook.instrumentID.empty=Instrument ID is empty
 orderBook.instrumentType.empty=Instrument Type is empty
+
+order.type.limitOrMarket.only=Order type should be LIMIT or MARKET
+order.limit.min.value=For a limit order price cannot be zero
+order.market.no.price=For a market order price should be null
+quantity.min=Minimum quantity is 100
+quantity.max=Maximum quantity is 100,000
+quantity.empty=Quantity cannot be NULL
+price.empty=Price cannot be NULL
+price.min=Price should be greater than zero
+order.unknown.value=Unknown order type
