Added domain and service

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,14 +1,17 @@
 instrumentID.empty=Instrument ID is empty
 instrumentType.empty=Instrument Type is empty
-
 order.type.limitOrMarket.only=Order type should be LIMIT or MARKET
 order.limit.min.value=For a limit order price cannot be zero
 order.market.no.price=For a market order price should be null
 order.unknown.value=Unknown order type
-
 quantity.min=Minimum quantity is 100
 quantity.max=Maximum quantity is 100,000
 quantity.empty=Quantity cannot be NULL
-
 price.empty=Price cannot be NULL
 price.min=Price should be greater than zero
+service.error.orderBook.exists=Unable to create requested order book as it already exists
+service.error.order.book.absent=Order book does not exist
+service.error.orderBook.already.open=Order book is already OPEN
+service.error.orderBook.already.closed=Order book is already CLOSED
+service.error.order.add.book.closed=Unable to add Order as book is CLOSED
+service.error.execution.add.open=Unable to add Execution as book is OPEN
